Bug 206994 - tar.gz listing is incomplete with Dolphin and Konqueror but Ark works fine.
Summary: tar.gz listing is incomplete with Dolphin and Konqueror but Ark works fine.
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: tar (other bugs)
Version First Reported In: 4.8.4
Platform: unspecified Linux
: NOR critical
Target Milestone: ---
Assignee: Mario Bensi
URL:
Keywords:
: 290376 315181 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-09-10 20:30 UTC by Taras Puchko
Modified: 2013-05-12 21:20 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Taras Puchko 2009-09-10 20:30:28 UTC
Version:            (using KDE 4.3.1)
OS:                Linux

Download idea-8.1.3.tar.gz from http://www.jetbrains.com/idea/download/index.html#linux and open it with Ark or decompress. 

You should see 24 different files in "idea-9886/bin" with the following extensions: .policy, .png, .properties, .sh, .vmoptions, .lic, .so, .dtd, and .xml.

But if you open the archive with Dolphin or Konqueror, you'll see only 16 different files with .png, .vmoptions, and .so extensions there.
Comment 1 Taras Puchko 2010-06-07 17:56:28 UTC
Can still be reproduced with KDE 4.4.4.

The following script illustrates the problem

mkdir -p 1/d
echo f1 > 1/d/f1.txt
mkdir -p 2/d
echo f2 > 2/d/f2.txt
cd 1
tar -cf ../test.tar *
cd ../2
tar -rf ../test.tar *
cd ..
tar -tf test.tar

The output is:
d/
d/f1.txt
d/
d/f2.txt

But Konqueror shows only d/f2.txt inside test.tar.

It looks like duplicated folder clears previous content found.
Comment 2 Barry Jackson 2011-12-03 00:25:39 UTC
I think this is possibly related but different in KDE 4.7.3
If this tar.gz - link here:-
https://github.com/mastertheknife/ZoneMinder-kfir/tarball/master
is viewed in dolphin it shows 2 files and a folder which is incorrect.

The two files are actually inside a sub folder (8 levels down) of the displayed folder.

Extracting with tar or opening in ark works correctly.
Comment 3 Kevin Kofler 2012-05-24 22:16:40 UTC
Comment #2 is a completely different bug, and in fact the same as bug #258737.

The original issue reported here is NOT the same as bug #258737. I can reproduce the bug with kdelibs-4.6.5-11.fc15 which has the fix for bug #258737 already backported.
Comment 4 Kevin Kofler 2012-05-24 22:24:56 UTC
(To be clear, I used the reproducer from comment #1.)
Comment 5 Kevin Kofler 2012-05-24 22:29:30 UTC
*** Bug 290376 has been marked as a duplicate of this bug. ***
Comment 6 Mario Bensi 2012-08-23 14:14:45 UTC
This bug is fixed for kde 4.8, I have tested with konqueror and ark on this version and i have the same result.
Comment 7 Taras Puchko 2012-08-23 15:20:56 UTC
I can still reproduce the bug in Konqueror on Kubuntu 12.04 with KDE 4.8.4
Comment 8 David P. 2013-02-12 09:22:09 UTC
Environment: KUbuntu 12.10.
KDE 4.9.3
Krusader latest 2.4.0-beta3

Steps to reproduce:
1) Download apache-maven-3.0.4-bin.tar.gz from http://maven.apache.org/download.cgi
2) Look into the archive by using Krusader.  The lib folder appears to be empty, even though it has 29 *.jar files inside!!!!!.
3) Try to unpack it, those hidden files aren't extracted.
4) Try uncompressing the file using Ark or any other 3rd party tool, and ALL the files are seen and extracted correctly.  So, this isn't an issue with corrupted files.  Also, Maven is a very popular tool, and it cannot be corrupted.
Comment 9 David P. 2013-02-12 09:40:17 UTC
Are there any plans for fixing this?
This bug provides unconfidence in Krusader.
Comment 10 Marcin Gryszkalis 2013-02-16 10:37:30 UTC
*** Bug 315181 has been marked as a duplicate of this bug. ***
Comment 11 Dawit Alemayehu 2013-05-12 01:44:53 UTC
Git commit fa9fa9ce0271e44117a70f03af58aa1963ba5df5 by Dawit Alemayehu.
Committed on 11/05/2013 at 21:38.
Pushed by adawit into branch 'KDE/4.10'.

Do not overwrite directories with the same name inside an archive.
REVIEW: 110392
FIXED-IN: 4.10.4

M  +4    -1    kdecore/io/ktar.cpp

http://commits.kde.org/kdelibs/fa9fa9ce0271e44117a70f03af58aa1963ba5df5
Comment 12 Dawit Alemayehu 2013-05-12 17:22:58 UTC
Git commit 471aa45613301ea2250fc6d815af8a65dc69a5ee by Dawit Alemayehu.
Committed on 12/05/2013 at 19:17.
Pushed by adawit into branch 'KDE/4.10'.

Improved the fix for bug# 206994 (commit fa9fa9) based on feedback from dfaure.
REVIEW: 110392

M  +1    -0    kdecore/io/karchive.cpp
M  +1    -4    kdecore/io/ktar.cpp

http://commits.kde.org/kdelibs/471aa45613301ea2250fc6d815af8a65dc69a5ee
Comment 13 David Faure 2013-05-12 21:20:50 UTC
Git commit a7cccfbb66d9ba42b54c34e8b3880c9214ca9692 by David Faure.
Committed on 12/05/2013 at 09:27.
Pushed by dfaure into branch 'KDE/4.10'.

Add unittest for KTar issue "same directory twice"

M  +17   -0    kdecore/tests/karchivetest.cpp
M  +1    -0    kdecore/tests/karchivetest.h

http://commits.kde.org/kdelibs/a7cccfbb66d9ba42b54c34e8b3880c9214ca9692