Do not overwrite directories with the same name inside an archive.

BUG: 206994
REVIEW: 110392
FIXED-IN: 4.10.4