kdecore/io/ktar.cpp
@@ -471,7 +471,10 @@ bool KTar::openArchive( QIODevice::OpenMode mode ) {
                         setRootDir( static_cast<KArchiveDirectory *>( e ) );
                     }
                 } else {
-                    rootDir()->addEntry( e );
+                    const KArchiveEntry* entry = rootDir()->entry(e->name());
+                    if (!entry || !entry->isDirectory()) {
+                        rootDir()->addEntry( e );
+                    }
                 }
             }
             else
